# reseda-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_.old  README.md  TODO.md  build.rs  build.sh  config.reseda  docker-compose.yaml  idts.yml  reseda-deployment.yaml  reseda-service.yaml
.github/workflows/: docker.yml
configs/: reseda.conf
configuration/: region.yml
src/: main.rs
src/lib/: handlers.rs  mod.rs  ws.rs
src/types/: client.rs  mod.rs  params.rs  query.rs  sql.rs  usage.rs  wireguard.rs
src/wireguard/: mod.rs  wireguard.rs
