[package]
name = "reseda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = "0.4.19"
sudo = "0.6"
futures-timer="3.0.2"
sqlx = { version = "0.6.1", features = [ "mysql", "runtime-tokio-rustls", "macros", "time" ] }
async-std = { version = "1.9", features = [ "attributes" ] }
dotenv = "0.15.0"
public-ip = "0.2.2"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14.19"
rcgen = "0.9.2"
config = { version = "0.13.2", default-features = false, features = ["yaml"] }

[dependencies.openssl]
version = "0.10.29"
features = [
    "vendored"
]